# GPS_tracker

./: CMakeLists.txt
src/: gps.c  gps.h  main.c  usart.h
test/: CMakeLists.txt  test_lib.c
